syntax = "proto3";

package user;

service UserService {
    rpc AuthenticateUser (AuthenticateUserRequest) returns (AuthenticateUserResponse);
    rpc RegisterUser (RegisterUserRequest) returns (User);
    rpc GetUser (GetUserRequest) returns (User);
}

message User {
    string id = 1;
    string name = 2;    
}

message GetUserRequest {
    string id = 1;
}

message RegisterUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message AuthenticateUserRequest {
    string email = 1;
    string password = 2;
}

message AuthenticateUserResponse {
    bool authenticated = 1;
}
